<resources>
    <string name="app_name">Brew Calculator</string>
    <string name="recipe"><b>Recipe Builder</b></string>
    <string name="my_recipes"><b>My Recipes</b></string>
    <string name="help"><b>Help</b></string>
    <string name="Amount"><b>Amount</b></string>
    <string name="Name"><b>Name</b></string>
    <string name="Type"><b>Type</b></string>
    <string name="Time"><b>Time</b></string>
    <string name="Bitter"><b>%/IBU</b></string>
    <string name="ingredients">Ingredients</string>
    <string name="holder">holder</string>
    <string name="boil_time"> <b>Boil Time</b></string>
    <string name="batch"> <b>Batch</b></string>
    <string name="Alpha"><b>Alpha</b></string>
    <string name="use"><b>Use</b></string>
    <string name="company"><b>Company</b></string>
    <string name="form"><b>Form</b></string>
    <string name="potential"><b>Potential</b></string>
    <string name="color"><b>Color</b></string>
    <string name="AddItems">Add Items \n
    to Recipe</string>
    <string name="name">Name</string>
    <string name="Style"><b>Style</b></string>
    <string name="efficiency"><b>Efficiency</b></string>

    <!--buttons-->
    <string name="add"><b>ADD</b></string>
    <string name="cancel"><b>CANCEL</b></string>
    <string name="save"><b>SAVE</b></string>
    <string name="id">ID</string>
    <string name="BeerStats"> Original Gravity\nTotal IBU\'s\nApprox. %ABV\nFinal Gravity</string>

    <string-array name="beer_types_array">
        <item>All Grain</item>
        <item>BIAB</item>
        <item>Extract</item>
    </string-array>

    <string-array name="weight_type_array">
        <item>Oz</item>
        <item>g</item>
    </string-array>

    <string-array name="use_array">
        <item>Mash</item>
        <item>Boil</item>
        <item>Primary</item>
        <item>Secondary</item>
    </string-array>

    <string-array name="amount_type_array">
        <item>Pkg</item>
        <item>Oz Slurry</item>
        <item>mL Slurry</item>
    </string-array>

    <string-array name="time_type_array">
        <item>Min</item>
        <item>Days</item>
    </string-array>

    <string-array name="all_amount_types">
        <item>oz</item>
        <item>g</item>
        <item>lb</item>
        <item>tsp</item>
        <item>tbsp</item>
        <item>each</item>
    </string-array>


    <string-array name="beer_styles_array">
        <item> Altbier </item>
        <item> Amber ale </item>
        <item> American Brown Ale </item>
        <item> Barley wine </item>
        <item> American </item>
        <item> Berliner weisse </item>
        <item> Bière de Garde </item>
        <item> Bitter </item>
        <item> Blonde Ale </item>
        <item> Bock </item>
        <item> Brown ale </item>
        <item> California Common/Steam Beer </item>
        <item> Cream Ale </item>
        <item> Dortmunder Export </item>
        <item> Doppelbock </item>
        <item> Dunkel </item>
        <item> Dunkelweizen </item>
        <item> Eisbock </item>
        <item> Flanders red ale </item>
        <item> Golden Ale </item>
        <item> Gose </item>
        <item> Gueuze </item>
        <item> Hefeweizen </item>
        <item> Helles </item>
        <item> India pale ale </item>
        <item> American IPA </item>
        <item> Imperial IPA </item>
        <item> Kölsch </item>
        <item> Lambic </item>
        <item> Light ale </item>
        <item> Maibock/Helles bock </item>
        <item> Malt liquor </item>
        <item> Mild </item>
        <item> Oktoberfestbier/Märzenbier </item>
        <item> Old ale </item>
        <item> Oud bruin </item>
        <item> Pale ale </item>
        <item> Pilsener/Pilsner/Pils </item>
        <item> German-Style Pilsener </item>
        <item> Bohemian Pilsener </item>
        <item> Classic American Pilsner </item>
        <item> Porter </item>
        <item> Red ale </item>
        <item> Roggenbier </item>
        <item> Saison </item>
        <item> Scotch ale </item>
        <item> Stout </item>
        <item> Schwarzbier </item>
        <item> Vienna lager </item>
        <item> Witbier </item>
        <item> Weissbier </item>
        <item> Weizenbock  </item>
    </string-array>

</resources>
