<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/dark_grey"
            android:gravity="center"
            android:text="@string/ingredients"
            android:background="@color/main_green"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            android:paddingRight="3dp"
            android:paddingEnd="3dp"
            android:layout_centerHorizontal="true" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/list_header_background"
            android:layout_below="@+id/textView">

            <TextView
                android:id="@+id/FirstHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                android:text="@string/Amount"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:paddingStart="3dp"
                android:paddingRight="3dp"
                android:paddingEnd="3dp">
            </TextView>

            <TextView
                android:id="@+id/SecondHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                android:text="@string/Name"
                android:layout_weight="2"
                android:paddingLeft="3dp"
                android:paddingStart="3dp"
                android:paddingRight="3dp"
                android:paddingEnd="3dp">
            </TextView>

            <TextView
                android:id="@+id/ThirdHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                android:text="@string/Type"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:paddingStart="3dp"
                android:paddingRight="3dp"
                android:paddingEnd="3dp">
            </TextView>

            <TextView
                android:id="@+id/FourthHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                android:text="@string/Time"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:paddingStart="3dp"
                android:paddingRight="3dp"
                android:paddingEnd="3dp">
            </TextView>


            <TextView
                android:id="@+id/FifthHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                android:text="@string/Bitter"
                android:layout_weight="1">
            </TextView>

        </LinearLayout>

    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_gravity="center_horizontal"
        android:divider="@null"
        android:dividerHeight="0dp"/>


</LinearLayout>