<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/headers"
        android:background="@drawable/list_header_background">

        <TextView
            android:id="@+id/FirstHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            android:text="@string/Name"
            android:layout_weight="2"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            android:paddingRight="3dp"
            android:paddingEnd="3dp">
        </TextView>

        <TextView
            android:id="@+id/SecondHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            android:text="@string/lab"
            android:layout_weight="1.5"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            android:paddingRight="3dp"
            android:paddingEnd="3dp">
        </TextView>

        <TextView
            android:id="@+id/ThirdHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            android:text="@string/id"
            android:layout_weight="1"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            android:paddingRight="3dp"
            android:paddingEnd="3dp">
        </TextView>

        <TextView
            android:id="@+id/FourthHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            android:text="@string/Type"
            android:layout_weight="1"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            android:paddingRight="3dp"
            android:paddingEnd="3dp">
        </TextView>

        <TextView
            android:id="@+id/FifthHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            android:text="@string/form"
            android:layout_weight="1"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            android:paddingRight="3dp"
            android:paddingEnd="3dp">
        </TextView>


    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/yeast_list"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/headers"/>

</RelativeLayout>


