<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_row"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#7e2d16">
        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="Pick a Grain"
            android:textSize="20sp"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            android:paddingRight="3dp"
            android:paddingEnd="3dp">
        </TextView>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_below="@+id/top_row"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/headers"
        android:background="#7e2d16">

        <TextView
            android:id="@+id/FirstHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/Name"
            android:layout_weight="2"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            android:paddingRight="3dp"
            android:paddingEnd="3dp">
        </TextView>

        <TextView
            android:id="@+id/SecondHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/Type"
            android:layout_weight="1.5"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            android:paddingRight="3dp"
            android:paddingEnd="3dp">
        </TextView>

        <TextView
            android:id="@+id/ThirdHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/color"
            android:layout_weight="1"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            android:paddingRight="3dp"
            android:paddingEnd="3dp">
        </TextView>

        <TextView
            android:id="@+id/FourthHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/potential"
            android:layout_weight="1"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            android:paddingRight="3dp"
            android:paddingEnd="3dp">
        </TextView>


    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/grain_list"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/headers"/>

</RelativeLayout>


