<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="290dp"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:theme="@style/CustomDialogueStyle"
    android:orientation="vertical" >


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Name"
            android:id="@+id/name" />
        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="@color/bright_white"
            android:inputType="text"
            android:backgroundTint="@color/gold"
            android:id="@+id/nameText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Type"
            android:id="@+id/type" />

        <EditText
            android:layout_width="60dp"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:textColor="@color/bright_white"
            android:backgroundTint="@color/gold"
            android:id="@+id/typeText" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/color"
            android:id="@+id/color" />
        <EditText
            android:layout_width="50dp"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:textColor="@color/bright_white"
            android:backgroundTint="@color/gold"
            android:id="@+id/colorText"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/potential"
            android:id="@+id/potential" />
        <EditText
            android:layout_width="50dp"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:textColor="@color/bright_white"
            android:backgroundTint="@color/gold"
            android:id="@+id/potentialText"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginBottom="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/use" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:backgroundTint="@color/gold"
            android:id="@+id/use" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Time" />

        <EditText
            android:layout_width="35dp"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:textColor="@color/bright_white"
            android:backgroundTint="@color/gold"
            android:id="@+id/time_box"
            android:textAlignment="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/gold"
            android:id="@+id/time_type" />


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Weight" />

        <EditText
            android:layout_width="40dp"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:textColor="@color/bright_white"
            android:backgroundTint="@color/gold"
            android:id="@+id/weight_lb"
            android:textAlignment="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="lb" />


        <EditText
            android:layout_width="40dp"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:textColor="@color/bright_white"
            android:backgroundTint="@color/gold"
            android:id="@+id/weight_oz"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="oz"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"

            android:clickable="true"
            android:text="@string/cancel"

            android:background="@drawable/buttonshape"/>

        <Button
            android:id="@+id/addItem"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:text="@string/add"


            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/buttonshape"/>

    </LinearLayout>



</LinearLayout>